[gd_scene load_steps=21 format=3 uid="uid://xggjpn5fg30q"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_6e15a"]
[ext_resource type="PackedScene" uid="uid://bockwc5pu7b24" path="res://scenes/swordArea.tscn" id="2_1ktvi"]
[ext_resource type="Texture2D" uid="uid://b828tar7r1lm5" path="res://sprites/zeldaCharSheet.png" id="2_v5nis"]
[ext_resource type="Texture2D" uid="uid://cfusdlc6cnjcx" path="res://sprites/hpTexture2.png" id="3_o2tn3"]
[ext_resource type="PackedScene" uid="uid://dnw0ksu5reapf" path="res://scenes/swordFlameArea.tscn" id="3_v5tfx"]
[ext_resource type="Texture2D" uid="uid://c51b4bbnu2nlj" path="res://sprites/hpTexture1.png" id="4_qgxdc"]
[ext_resource type="Texture2D" uid="uid://de37kymbdbiw" path="res://sprites/gold.png" id="6_r2wum"]
[ext_resource type="FontFile" uid="uid://cyjcgqj33s6nv" path="res://fonts/the-legend-of-zelda-nes.ttf" id="7_7qgyg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_btvs4"]
size = Vector2(10, 15)

[sub_resource type="Animation" id="Animation_jvicv"]
resource_name = "attackDown"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_mc6qv"]
resource_name = "attackLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gorunus:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_r3e3q"]
resource_name = "attackRight"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [13, 14, 15, 16]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gorunus:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kjyqe"]
resource_name = "attackUp"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_ok1ib"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pt3hd"]
resource_name = "walkDown"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_jtj8n"]
resource_name = "walkLeft"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gorunus:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_kch0y"]
resource_name = "walkRight"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Gorunus:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_u6llc"]
resource_name = "walkUp"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Gorunus:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3k4no"]
_data = {
"attackDown": SubResource("Animation_jvicv"),
"attackLeft": SubResource("Animation_mc6qv"),
"attackRight": SubResource("Animation_r3e3q"),
"attackUp": SubResource("Animation_kjyqe"),
"idle": SubResource("Animation_ok1ib"),
"walkDown": SubResource("Animation_pt3hd"),
"walkLeft": SubResource("Animation_jtj8n"),
"walkRight": SubResource("Animation_kch0y"),
"walkUp": SubResource("Animation_u6llc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5xgn"]
size = Vector2(32, 32)

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_6e15a")
sword = ExtResource("2_1ktvi")
flameSword = ExtResource("3_v5tfx")
metadata/_edit_group_ = true

[node name="Iskelet" type="CollisionShape2D" parent="."]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_btvs4")

[node name="Gorunus" type="Sprite2D" parent="."]
texture = ExtResource("2_v5nis")
hframes = 21
frame = 17

[node name="Animasyon" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3k4no")
}
autoplay = "idle"

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_s5xgn")

[node name="attackCooldown" type="Timer" parent="."]

[node name="dealAttackTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="HUD" type="CanvasLayer" parent="."]

[node name="BackGround" type="ColorRect" parent="HUD"]
offset_right = 256.0
offset_bottom = 32.0
color = Color(0, 0, 0, 1)

[node name="hpbar" type="TextureProgressBar" parent="HUD"]
offset_left = 200.0
offset_top = 8.0
offset_right = 248.0
offset_bottom = 24.0
max_value = 3.0
step = 0.5
value = 3.0
texture_under = ExtResource("3_o2tn3")
texture_progress = ExtResource("4_qgxdc")

[node name="coinSprite" type="Sprite2D" parent="HUD"]
position = Vector2(24, 16)
texture = ExtResource("6_r2wum")

[node name="globalCoin" type="Label" parent="HUD"]
offset_left = 32.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 31.0
theme_override_fonts/font = ExtResource("7_7qgyg")
text = "x0"

[node name="HandPos" type="Marker2D" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="dealAttackTimer" to="." method="_on_deal_attack_timer_timeout"]
